# hmusic

./: .gitignore  HMusic.cabal  HMusic.hs  Makefile
song/: Song.hs
src/: HMusic.hs
