cabal-version:       >=1.10

name:                HMusic
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- license-file:
-- author:
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:  CHANGELOG.md

library
  default-language: Haskell2010
  build-depends:    base >= 4 && < 5,
                    connection >= 0.3,
                    process >= 1.6,
                    uuid >= 1.3
  hs-source-dirs:   src
  exposed-modules:  HMusic
  -- extensions:
  ghc-options:      -Wall